--- a/package.json
+++ b/package.json
@@ -5,20 +5,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:production": "node scripts/build-production.js",
-    "preview": "vite preview",
     "test": "vitest --run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest --coverage",
-    "format": "prettier --check .",
     "format.fix": "prettier --write .",
-    "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "analyze": "npm run build && npx vite-bundle-analyzer dist/assets/",
-    "deploy:vercel": "vercel --prod",
-    "deploy:netlify": "netlify deploy --prod --dir=dist",
-    "clean": "rm -rf dist node_modules/.vite",
-    "prepare": "npm run typecheck"
+    "typecheck": "tsc",
+    "setup:supabase": "echo 'Run the SQL commands from src/lib/supabase.ts in your Supabase dashboard'"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -76,7 +66,6 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "vaul": "^0.9.3",
-    "web-vitals": "^5.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -90,7 +79,6 @@
     "postcss": "^8.4.47",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.11",
-    "terser": "^5.43.0",
     "typescript": "^5.5.3",
     "vite": "^6.2.2",
     "vitest": "^3.1.4"
